--- a/index.html
+++ b/index.html
@@ -11,11 +11,15 @@
   <!-- Main JS -->
   <script defer src="./script.js"></script>
 
-  <title>Pokédex</title>
+  <title>PokéAPI</title>
 </head>
 <body>
-  
+    <header>
+    <img src="./img/pokeapi.png" alt="PokeAPI" class="pokeapi">
+</header>
   <main>
+
+    
     <img src="#" alt="pokemon" class="pokemon__image">
 
     <h1 class="pokemon__data">
